Minor css change to fix alignment bug. Updated module.json.

--- a/succ/styles/succ.css
+++ b/succ/styles/succ.css
@@ -409,6 +409,7 @@ a.add-temporary {
     flex-direction: column;
     justify-content: flex-start;
     overflow: hidden auto;
+    align-items: normal;
 }
 
 .succ-default-conditions aside.sidebar nav.tabs .group-tab {
